<resources>
    <string name="app_name">Klimboo</string>
    <string name="login">Login</string>
    <string name="logo_klimboo">Logo Klimboo</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="register">Registre-se</string>
    <string name="login_button">Login</string>
    <string name="register_button">Registrar-se</string>
    <string name="logout">Logout</string>
    <string name="title_activity_settings">Configurações</string>

    <string name="toolbar_ferramentas">Ferramentas</string>

    <string name="user_default_name">Nome</string>
    <string name="user_default_email">Usuario@gmail.com</string>

    <string name="search_hint">Buscar item</string>

    <string name="chip_todas">Todas</string>
    <string name="chip_chaves">Chaves</string>
    <string name="chip_equipamentos">Equipamentos</string>
    <string name="chip_pecas">Peças</string>


    <!-- Preference Titles -->
    <string name="messages_header">Mensagens</string>
    <string name="sync_header">Sincronização</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Sua assinatura</string>
    <string name="reply_title">Ação padrão de resposta</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sincronizar e-mail periodicamente</string>
    <string name="attachment_title">Baixar anexos recebidos</string>
    <string name="attachment_summary_on">Baixar anexos automaticamente para e-mails recebidos
    </string>
    <string name="attachment_summary_off">Baixar anexos somente quando solicitado manualmente</string>
    <string name="modo_escuro">Modo Escuro</string>
    <string name="configurações">Configurações\n</string>
    <string name="goback">Voltar</string>
    <string name="details">Detalhes do usuário</string>
    <string name="user_name">Nome de usuário</string>
    <string name="tools">Ferramentas</string>
    <string name="settings_desc">Configurações</string>
    <string name="parts">Peças</string>
    <string name="equip">Equipamentos</string>
    <string name="wrench">Chaves</string>
    <string name="all_equip">Todas</string>
    <string name="find_item">Buscar item</string>
    <string name="login_btn">Botão de login</string>
    <string name="maiLocker">Armário de Manutenção</string>
    <string name="macLocker">Armário de Usinagem</string>
    <string name="stock_desc">desc estoque</string>
    <string name="qr_desc">desc qrcode</string>
    <string name="precisa_permissao">Permissão de acesso a câmera é necessário</string>
    <string name="falha_ao_escanear_qr_code">Falha ao escanear QR CODE</string>
    <string name="qr_code_nao_detectado">QR CODE não detectado</string>
    <string name="forgot_password">Esqueci a senha</string>
    <string name="edit_stock">edit stock\n</string>
    <string name="hello_blank_fragment">Fragmento vazio</string>
    <string name="adicionar_stock">Adicionar</string>
    <string name="editar_stock">Editar</string>
    <string name="excluir_stock">Excluir</string>
    <string name="nome_do_usuario">Nome do Usuário</string>
    <string name="email_exemplo_com">email@exemplo.com</string>
    <string name="trocar_email">Trocar E-mail</string>
    <string name="trocar_senha">Trocar Senha</string>
    <string name="adicionar_ao_estoque">Adicionar ao Estoque</string>
    <string name="item">Item</string>
    <string name="arm_rio">Armário</string>
    <string name="nome_do_arm_rio">Nome do Armário</string>
    <string name="nome_da_ferramenta_item">Nome da Ferramenta / Item</string>
    <string name="onde_ser_guardado">Onde será guardado?</string>
    <string name="salvar">Salvar</string>
    <string name="buscar_armario">Buscar armário…</string>
    <string name="image">Imagem</string>
    <string name="imagem_do_armario">Imagem do armario</string>
    <string name="Parafusos">Parafusos</string>
    <string name="brocas">Brocas</string>
    <string name="remover_do_estoque">Remover do Estoque</string>
    <string name="arm_rio_a_remover">Armário a remover:</string>
    <string name="remover_foto">Remover foto</string>
    <string name="mover_itens_para">Mover itens para:</string>
    <string name="buscar_arm_rio_destino">Buscar armário destino…</string>
    <string name="nenhum_outro_arm_rio_dispon_vel_os_itens_ser_o_deletados_junto">⚠️ Nenhum outro armário disponível. Os itens serão deletados junto.</string>
    <string name="item_a_remover">Item a remover:</string>
    <string name="buscar_item">Buscar item…</string>
    <string name="remover_foto_item">Remover foto</string>
    <string name="confirmar_remocao">Confirmar Remoção</string>
    <string name="preview_do_item">Preview do Item</string>
    <string name="preview_do_armario">Preview do Armário</string>
    <string name="armario">Armário</string>
    <string name="item_botao_toggle">Item</string>
    <string name="adicionar_foto">Adicionar foto</string>
    <string name="remover_foto_botao">Remover foto</string>
    <string name="preview_do_item_add">Preview do Item</string>
    <string name="adicionar_foto_add">Adicionar foto</string>
    <string name="remover_foto_add">Remover foto</string>
    <string name="preview_do_armario_add">Preview do Armário</string>
    <string name="editar_estoque">Editar Estoque</string>
    <string name="selecionar_armario_edit">Selecionar Armário:</string>
    <string name="buscar_armario_edit">Buscar armário…</string>
    <string name="alterar_nome_do_armario">Alterar nome do armário</string>
    <string name="novo_nome_do_armario">Novo nome do Armário</string>
    <string name="alterar_foto_edit">Alterar foto</string>
    <string name="remover_foto_edit">Remover foto</string>
    <string name="selecionar_item_edit">Selecionar Item:</string>
    <string name="buscar_item_edit">Buscar item…</string>
    <string name="alterar_nome_do_item_edit">Alterar nome do item</string>
    <string name="novo_nome_do_item_edit">Novo nome do Item</string>
    <string name="alterar_armario_do_item_edit">Alterar armário do item</string>
    <string name="buscar_armario_destino_edit">Buscar armário destino…</string>
    <string name="preview_do_item_edit">Preview do Item</string>
    <string name="alterar_foto_edit_item">Alterar foto</string>
    <string name="remover_foto_edit_item">Remover foto</string>
    <string name="salvar_alteracao_edit">Salvar Alteração</string>
    <string name="preview_do_armario_edit">Preview do Armário</string>
    <string name="entry_as_guest">Entrar como visitante</string>
    <string name="locker_place">Local do armário</string>
    <string name="change_local_locker">Alterar local do armário</string>
    <string name="new_locker_local">Novo local do armário</string>
    <string name="locker">Armário</string>
    <string name="item_locker">Item</string>
    <string name="Sair">Sair\n</string>
    <string name="locker_format">Armário: %s</string>
    <string name="local_format">Local do Armário: %s</string>
    <string name="local_locker">Local do Armário: %s</string>
    <string name="exit_app">Sair do Aplicativo</string>
    <string name="voltar_mainpage">Voltar para página principal\n</string>
</resources>
