<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StockPage"
    tools:theme="@style/Theme.AppCompat.Light.DarkActionBar">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/royal_blue"
        android:title="@string/tools"
        android:titleTextColor="@android:color/white"
        android:layout_alignParentTop="true" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/logo_klimboo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/logomini" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutLockerSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <AutoCompleteTextView
            android:id="@+id/autoCompleteLockers"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:completionThreshold="0"
            android:hint="@string/buscar_armario"
            android:inputType="textCapWords"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listTools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/layoutLockerSearch"
        android:layout_above="@id/editStock"
        android:layout_margin="16dp" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/editStock"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/edit_stock"
        android:padding="6dp"
        android:scaleType="fitXY"
        android:src="@drawable/edit_stock"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:tint="@color/buttonsTint"
        app:shapeAppearanceOverlay="@style/RoundedCorners"
        android:visibility="gone"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/backtomainButton"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/voltar_mainpage"
        android:src="@drawable/exit_button"
        android:scaleType="fitXY"
        android:padding="6dp"
        android:visibility="visible"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        app:shapeAppearanceOverlay="@style/RoundedCorners"
        app:tint="@color/buttonsTint"/>

</RelativeLayout>
